# json2q

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
src/json2q/: json2q.py
tests/: test_json2q.py
